# pneuma

./: .env  .gitignore  main.py  pyproject.toml
.pytest_cache/: .gitignore  README.md
.pytest_cache/v/cache/: lastfailed  nodeids
data/: compute_error_stats.py  fetch_entsoe_actuals.py  fetch_entsoe_forecasts.py  merge_actuals_forecasts.py
data/data/actual/: DE_load_actuals_2015.csv  DE_load_actuals_2016.csv  DE_load_actuals_2017.csv  DE_load_actuals_2018.csv  DE_load_actuals_2019.csv  DE_load_actuals_2020.csv  DE_load_actuals_2021.csv  DE_load_actuals_2022.csv  DE_load_actuals_2023.csv  DE_load_actuals_2024.csv  DE_load_actuals_2025.csv  (+33 more)
experimental/: cli_v5.py
experimental/src/: landuse.py  preprocess.py
experimental/tests/: test_v5_config_cli.py
experimental/utils/: boundaries.py  sw_balance.py  urban_physics.py
legacy/manual_runs/: run_sw_rusanov.py  smoke_rusanov.py
legacy/notebooks/: era5_to_sw.ipynb  toy_climate_circulation.ipynb  uhi_toy.ipynb  validation_heat1d.ipynb
legacy/old_models/: shallow_water.py
legacy/surrogate/: sr_eval.py  sr_train.py
notebooks/: Demo_SW_Toy.ipynb
outputs/heat1d/: metrics.json  u_final.csv
src/: cli.py  config.py  runner.py
src/io/: era5.py  preprocess.py
src/models/: sw_adapter.py
src/pdes/: heat_solver_1d.py  shallow_water.py
src/pneuma.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cfl_heat.py  test_norms_monotonic_decay.py  test_reproducibility_runner.py  test_runner_constant_solution.py  test_runner_decay.py
validation/: metrics.py  plots.py
(+67 files in other folders)
